# housing_price_prediction

./: Makefile  README.md  pyproject.toml  setup.cfg
notebooks/: housing_price_prediction.ipynb
